--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-service",
+  "name": "simple-api-service",
   "version": "1.0.0",
   "description": "A simple HTTP API service for making requests with token authentication.",
   "main": "index.js",
