--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "release": "gh-release"
   },
+  "repository": {
+    "url": "https://github.com/britzdylan/api-service"
+  },
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog"
